[gd_scene load_steps=22 format=3 uid="uid://cvjuxbgf2hybk"]

[ext_resource type="Script" path="res://character_viewer.gd" id="1_t4afi"]
[ext_resource type="Texture2D" uid="uid://b6sfrgq2c0ms0" path="res://assets/dirtHigh.png" id="1_yidp5"]
[ext_resource type="Texture2D" uid="uid://bd7eo8nlldriw" path="res://assets/dummy.png" id="2_xnbfj"]
[ext_resource type="Script" path="res://CameraView.gd" id="3_67m04"]
[ext_resource type="Texture2D" uid="uid://ds4um8hw8odeb" path="res://assets/left.png" id="4_jilyd"]
[ext_resource type="Texture2D" uid="uid://d2p0hapi0u2s1" path="res://assets/super_payet/SuperPayet_0001.png" id="4_jvx7u"]
[ext_resource type="Texture2D" uid="uid://c1urmoi8scnob" path="res://assets/right.png" id="5_iiny8"]
[ext_resource type="Texture2D" uid="uid://bd6nwxtsscpus" path="res://assets/super_payet/SuperPayet_0002.png" id="5_so6q4"]
[ext_resource type="Texture2D" uid="uid://dyn71enjrj3ny" path="res://assets/super_payet/SuperPayet_0003.png" id="6_mcvb1"]
[ext_resource type="Texture2D" uid="uid://brqjvcpnxn86s" path="res://assets/super_payet/SuperPayet_0004.png" id="7_bbhjc"]
[ext_resource type="Texture2D" uid="uid://co1rr4qm5if2j" path="res://assets/super_payet/SuperPayet_0005.png" id="8_tqplx"]
[ext_resource type="Script" path="res://Label.gd" id="12_6dyp7"]
[ext_resource type="Texture2D" uid="uid://dbbyry3nrf6md" path="res://assets/move.png" id="13_6bpbl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pi6ph"]
texture = ExtResource("1_yidp5")
texture_region_size = Vector2i(100, 66)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_c8ktc"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(100, 50)
sources/0 = SubResource("TileSetAtlasSource_pi6ph")

[sub_resource type="AtlasTexture" id="AtlasTexture_865pu"]
atlas = ExtResource("2_xnbfj")
region = Rect2(0, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mid4t"]
atlas = ExtResource("2_xnbfj")
region = Rect2(0, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qryvd"]
atlas = ExtResource("2_xnbfj")
region = Rect2(100, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8y4q"]
atlas = ExtResource("2_xnbfj")
region = Rect2(0, 450, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo78y"]
atlas = ExtResource("2_xnbfj")
region = Rect2(100, 450, 100, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_p06j6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jvx7u")
}, {
"duration": 1.0,
"texture": ExtResource("5_so6q4")
}, {
"duration": 1.0,
"texture": ExtResource("6_mcvb1")
}, {
"duration": 1.0,
"texture": ExtResource("7_bbhjc")
}, {
"duration": 1.0,
"texture": ExtResource("8_tqplx")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_865pu")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mid4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qryvd")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8y4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo78y")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[node name="CharacterViewer" type="Node2D"]
script = ExtResource("1_t4afi")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_c8ktc")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(65535, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 0, 0, 0, -65536, 0, 0, -1, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_67m04")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -42)
sprite_frames = SubResource("SpriteFrames_p06j6")
animation = &"down"

[node name="Button" type="Button" parent="."]
offset_left = -133.0
offset_top = -40.0
offset_right = -75.0
offset_bottom = 18.0
icon = ExtResource("4_jilyd")

[node name="Button2" type="Button" parent="."]
offset_left = 75.0
offset_top = -42.0
offset_right = 133.0
offset_bottom = 16.0
icon = ExtResource("5_iiny8")

[node name="Label" type="Label" parent="."]
offset_left = -544.0
offset_top = -303.0
offset_right = -504.0
offset_bottom = -280.0
script = ExtResource("12_6dyp7")

[node name="Button3" type="Button" parent="."]
offset_left = -29.0
offset_top = 13.0
offset_right = 29.0
offset_bottom = 71.0
icon = ExtResource("13_6bpbl")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
